cmake_minimum_required(VERSION 3.23)
project(Project_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Project_1
        .idea/.gitignore
        .idea/modules.xml
        ".idea/Project 1.iml"
        .idea/workspace.xml
        a.exe
        database.csv
        database_output.csv
        library.cpp
        library.exe)
